# PyROPS

./: .gitignore  README.md  pyproject.toml
ASRI_Simulator/: HYROPS Key.xlsx  Path.txt  PyROPS.cmd  Variables.txt  launcher.pyw
ASRI_Simulator/body/: Limitations.xlsx  OpenGL.xlsx  OpenGL1.xlsx  OpenGL3.xlsx  OpenGL4.xlsx  Solidworks API VBA.vb  Solidworks API VBA2.vb  __init__.py  aerodynamics.pyw  calculator.pyw  constants.pyw  fins.pyw  fixed_step_solver.pyw  graphics_library.pyw  gravitation_WGS84.pyw  gravitation_spherical.py  main.pyw  missile_datcom.pyw  monte_carlo.pyw  monte_carlo_density.pyw  monte_carlo_plot.csv  monte_carlo_plot.pyw  sidedamping.pyw  thrust_curve_fit.pyw  thrust_curve_fit_UI.pyw  transformations.pyw  wind.pyw
ASRI_Simulator/body/OTR/: OTR_file_1.csv  OTR_file_2.csv
ASRI_Simulator_New/: __init__.py  main.py
ASRI_Simulator_New/config/: __init__.py  appsettings.json  settings_manager.py
ASRI_Simulator_New/gui/: __init__.py  main_window.py
ASRI_Simulator_New/models/: __init__.py  models.py
ASRI_Simulator_New/simulation/: __init__.py  engine.py
ASRI_Simulator_New/utils/: __init__.py  utils.py
Inputs/: MissileDATCOM.xlsx  RASAeroII Detailed.xlsx  RASAeroII.xlsx  RASAeroII15 Detailed.xlsx  RASAeroII15.xlsx  RASAeroIIBooster.xlsx  RASAeroIIBooster15.xlsx  RASAeroIINose.xlsx  RASAeroIINose15.xlsx  Settings.xlsx  atmosphere_data.xlsx  atmosphere_data_generate.py  mass_properties.xlsx  side_damping.xlsx  thrust_curve_RAW.csv  thrust_curve_hybrid.xlsx  thrust_curve_liquid.xlsx  thrust_curve_staging.xlsx  wind.xlsx  wind_from.xlsx
