[tool.poetry]
name = "asri-simulator"
version = "2.3.12"
description = "Python Rocket Performance Simulator (PyROPS)"
authors = ["Aerospace Systems Research Institute"]
readme = "README.md"
packages = [{include = "body"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
pandas = "^1.3.0"
scipy = "^1.7.0"
matplotlib = "^3.4.0"
pillow = "^10.4.0"
pygame = "^2.1.0"
pyopengl = "^3.1.0"
pyopengl-accelerate = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyrops = "launcher:main"
